# grpc-demo

./: .gitignore  Makefile  README.md
proto/: message.proto  service.proto
python/: __init__.py  proto_build.py  pyproject.toml
python/client/: client.py
python/server/: server.py
